--- a/index/templates/history_contents/Worlds/22.html
+++ b/index/templates/history_contents/Worlds/22.html
@@ -310,35 +310,35 @@
 				<th>순위</th><th colspan="2">팀</th><th>승</th><th>패</th><th>기타</th>
 				<tr>
 					<td style="background-color: #aaddff;">1</td>
-					<td><img src="{% static 'img/teams/Worlds 2022/FNC.webp' %}"></td>
-					<td>Fnatic</td>
-					<td>4</td>
+					<td><img src="{% static 'img/teams/Worlds 2022/T1.webp' %}"></td>
+					<td>T1</td>
+					<td>5</td>
 					<td>1</td>
 					<td>-</td>
 				</tr>
 				<tr>
 					<td style="background-color: #97ECAB;">2</td>
-					<td><img src="{% static 'img/teams/Worlds 2022/EG.webp' %}"></td>
-					<td>Evil Geniuses</td>
-					<td>5</td>
+					<td><img src="{% static 'img/teams/Worlds 2022/EDG.webp' %}"></td>
+					<td>Edward Gaming Hycan</td>
+					<td>4</td>
 					<td>2</td>
-					<td>순위 결정전 1, 2 승리</td>
+					<td>-</td>
 				</tr>
 				<tr>
-					<td style="background-color: #ccffcc;">3</td>
-					<td><img src="{% static 'img/teams/Worlds 2022/LLL.webp' %}"></td>
-					<td>LOUD</td>
-					<td>3</td>
-					<td>3</td>
-					<td>순위 결정전 2 패배</td>
+					<td style="background-color: #ffcccc;">3</td>
+					<td><img src="{% static 'img/teams/Worlds 2022/FNC.webp' %}"></td>
+					<td>Fnatic</td>
+					<td>2</td>
+					<td>4</td>
+					<td>-</td>
 				</tr>
 				<tr>
-					<td style="background-color: #ccffcc;">4</td>
-					<td><img src="{% static 'img/teams/Worlds 2022/DFM.webp' %}"></td>
-					<td>DetonatioN FocusMe</td>
-					<td>3</td>
-					<td>3</td>
-					<td>순위 결정전 1 패배</td>
+					<td style="background-color: #ffcccc;">4</td>
+					<td><img src="{% static 'img/teams/Worlds 2022/C9.webp' %}"></td>
+					<td>Cloud9</td>
+					<td>1</td>
+					<td>5</td>
+					<td>-</td>
 				</tr>
 			</table>
 			
@@ -357,35 +357,35 @@
 				<th>순위</th><th colspan="2">팀</th><th>승</th><th>패</th><th>기타</th>
 				<tr>
 					<td style="background-color: #aaddff;">1</td>
-					<td><img src="{% static 'img/teams/Worlds 2022/FNC.webp' %}"></td>
-					<td>Fnatic</td>
-					<td>4</td>
+					<td><img src="{% static 'img/teams/Worlds 2022/JDG.webp' %}"></td>
+					<td>JDG Intel Esports Club</td>
+					<td>6</td>
 					<td>1</td>
-					<td>-</td>
+					<td>순위 결정전 승리</td>
 				</tr>
 				<tr>
 					<td style="background-color: #97ECAB;">2</td>
-					<td><img src="{% static 'img/teams/Worlds 2022/EG.webp' %}"></td>
-					<td>Evil Geniuses</td>
+					<td><img src="{% static 'img/teams/Worlds 2022/DWG.webp' %}"></td>
+					<td>DWG KIA</td>
 					<td>5</td>
 					<td>2</td>
-					<td>순위 결정전 1, 2 승리</td>
+					<td>순위 결정전 패배</td>
 				</tr>
 				<tr>
-					<td style="background-color: #ccffcc;">3</td>
-					<td><img src="{% static 'img/teams/Worlds 2022/LLL.webp' %}"></td>
-					<td>LOUD</td>
-					<td>3</td>
-					<td>3</td>
-					<td>순위 결정전 2 패배</td>
+					<td style="background-color: #ffcccc;">3</td>
+					<td><img src="{% static 'img/teams/Worlds 2022/G2.webp' %}"></td>
+					<td>G2 Esports</td>
+					<td>1</td>
+					<td>5</td>
+					<td>-</td>
 				</tr>
 				<tr>
-					<td style="background-color: #ccffcc;">4</td>
-					<td><img src="{% static 'img/teams/Worlds 2022/DFM.webp' %}"></td>
-					<td>DetonatioN FocusMe</td>
-					<td>3</td>
-					<td>3</td>
-					<td>순위 결정전 1 패배</td>
+					<td style="background-color: #ffcccc;">4</td>
+					<td><img src="{% static 'img/teams/Worlds 2022/EG.webp' %}"></td>
+					<td>Evil Geniuses</td>
+					<td>1</td>
+					<td>5</td>
+					<td>-</td>
 				</tr>
 			</table>
 		</div>
@@ -406,35 +406,35 @@
 				<th>순위</th><th colspan="2">팀</th><th>승</th><th>패</th><th>기타</th>
 				<tr>
 					<td style="background-color: #aaddff;">1</td>
-					<td><img src="{% static 'img/teams/Worlds 2022/FNC.webp' %}"></td>
-					<td>Fnatic</td>
-					<td>4</td>
-					<td>1</td>
-					<td>-</td>
+					<td><img src="{% static 'img/teams/Worlds 2022/DRX.webp' %}"></td>
+					<td>DRX</td>
+					<td>5</td>
+					<td>2</td>
+					<td>순위 결정전 승리</td>
 				</tr>
 				<tr>
 					<td style="background-color: #97ECAB;">2</td>
-					<td><img src="{% static 'img/teams/Worlds 2022/EG.webp' %}"></td>
-					<td>Evil Geniuses</td>
+					<td><img src="{% static 'img/teams/Worlds 2022/RGE.webp' %}"></td>
+					<td>Rogue</td>
+					<td>4</td>
+					<td>3</td>
+					<td>순위 결정전 패배</td>
+				</tr>
+				<tr>
+					<td style="background-color: #ffcccc;">3</td>
+					<td><img src="{% static 'img/teams/Worlds 2022/TES.webp' %}"></td>
+					<td>Top Esports</td>
+					<td>3</td>
+					<td>3</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td style="background-color: #ffcccc;">4</td>
+					<td><img src="{% static 'img/teams/Worlds 2022/GAM.webp' %}"></td>
+					<td>GAM Esports</td>
+					<td>1</td>
 					<td>5</td>
-					<td>2</td>
-					<td>순위 결정전 1, 2 승리</td>
-				</tr>
-				<tr>
-					<td style="background-color: #ccffcc;">3</td>
-					<td><img src="{% static 'img/teams/Worlds 2022/LLL.webp' %}"></td>
-					<td>LOUD</td>
-					<td>3</td>
-					<td>3</td>
-					<td>순위 결정전 2 패배</td>
-				</tr>
-				<tr>
-					<td style="background-color: #ccffcc;">4</td>
-					<td><img src="{% static 'img/teams/Worlds 2022/DFM.webp' %}"></td>
-					<td>DetonatioN FocusMe</td>
-					<td>3</td>
-					<td>3</td>
-					<td>순위 결정전 1 패배</td>
+					<td>-</td>
 				</tr>
 			</table>
 			
@@ -453,35 +453,35 @@
 				<th>순위</th><th colspan="2">팀</th><th>승</th><th>패</th><th>기타</th>
 				<tr>
 					<td style="background-color: #aaddff;">1</td>
-					<td><img src="{% static 'img/teams/Worlds 2022/FNC.webp' %}"></td>
-					<td>Fnatic</td>
-					<td>4</td>
+					<td><img src="{% static 'img/teams/Worlds 2022/GEN.webp' %}"></td>
+					<td>Gen.G</td>
+					<td>6</td>
 					<td>1</td>
-					<td>-</td>
+					<td>순위 결정전 승리</td>
 				</tr>
 				<tr>
 					<td style="background-color: #97ECAB;">2</td>
-					<td><img src="{% static 'img/teams/Worlds 2022/EG.webp' %}"></td>
-					<td>Evil Geniuses</td>
+					<td><img src="{% static 'img/teams/Worlds 2022/RNG.webp' %}"></td>
+					<td>Royal Never Give Up</td>
 					<td>5</td>
 					<td>2</td>
-					<td>순위 결정전 1, 2 승리</td>
+					<td>순위 결정전 패배</td>
 				</tr>
 				<tr>
-					<td style="background-color: #ccffcc;">3</td>
-					<td><img src="{% static 'img/teams/Worlds 2022/LLL.webp' %}"></td>
-					<td>LOUD</td>
-					<td>3</td>
-					<td>3</td>
-					<td>순위 결정전 2 패배</td>
+					<td style="background-color: #ffcccc;">3</td>
+					<td><img src="{% static 'img/teams/Worlds 2022/100.webp' %}"></td>
+					<td>100 Thieves</td>
+					<td>1</td>
+					<td>5</td>
+					<td>-</td>
 				</tr>
 				<tr>
-					<td style="background-color: #ccffcc;">4</td>
-					<td><img src="{% static 'img/teams/Worlds 2022/DFM.webp' %}"></td>
-					<td>DetonatioN FocusMe</td>
-					<td>3</td>
-					<td>3</td>
-					<td>순위 결정전 1 패배</td>
+					<td style="background-color: #ffcccc;">4</td>
+					<td><img src="{% static 'img/teams/Worlds 2022/CFO.webp' %}"></td>
+					<td>CTBC Flying Oyster</td>
+					<td>1</td>
+					<td>5</td>
+					<td>-</td>
 				</tr>
 			</table>
 		</div>
@@ -507,54 +507,54 @@
 			<div class="tournament_round">
 				<div class="tournament_block" style="margin-bottom: 50px;">
 					<div class="tournament_index">8강 1경기<br>(Bo5)</div>
-					<div class="tournament_team lose">
-						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/NRG.webp' %}"></div>
-						<div class="tournament_team_name">NRG</div>
-						<div class="tournament_team_score">0</div>
-					</div>
-					<div class="tournament_team win">
-						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/WBG.webp' %}"></div>
-						<div class="tournament_team_name">Weibo Gaming Faw Audi</div>
-						<div class="tournament_team_score">3</div>
-					</div>
-				</div>
-				<div class="tournament_block" style="margin-bottom: 50px;">
-					<div class="tournament_index">8강 2경기<br>(Bo5)</div>
-					<div class="tournament_team lose">
-						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/GEN.webp' %}"></div>
-						<div class="tournament_team_name">Gen.G</div>
-						<div class="tournament_team_score">2</div>
-					</div>
-					<div class="tournament_team win">
-						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/BLG.webp' %}"></div>
-						<div class="tournament_team_name">Bilibili Gaming Pingan Bank</div>
-						<div class="tournament_team_score">3</div>
-					</div>
-				</div>
-				<div class="tournament_block" style="margin-bottom: 50px;">
-					<div class="tournament_index">8강 3경기<br>(Bo5)</div>
 					<div class="tournament_team win">
 						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/JDG.webp' %}"></div>
 						<div class="tournament_team_name">JDG Intel Esports Club</div>
 						<div class="tournament_team_score">3</div>
 					</div>
 					<div class="tournament_team lose">
-						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/KT.webp' %}"></div>
-						<div class="tournament_team_name">kt Rolster</div>
-						<div class="tournament_team_score">1</div>
-					</div>
-				</div>
-				<div class="tournament_block">
-					<div class="tournament_index">8강 4경기<br>(Bo5)</div>
-					<div class="tournament_team lose">
-						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/LNG.webp' %}"></div>
-						<div class="tournament_team_name">LNG Esports</div>
+						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/RGE.webp' %}"></div>
+						<div class="tournament_team_name">Rogue</div>
 						<div class="tournament_team_score">0</div>
 					</div>
+				</div>
+				<div class="tournament_block" style="margin-bottom: 50px;">
+					<div class="tournament_index">8강 2경기<br>(Bo5)</div>
 					<div class="tournament_team win">
 						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/T1.webp' %}"></div>
 						<div class="tournament_team_name">T1</div>
 						<div class="tournament_team_score">3</div>
+					</div>
+					<div class="tournament_team lose">
+						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/RNG.webp' %}"></div>
+						<div class="tournament_team_name">Royal Never Give Up</div>
+						<div class="tournament_team_score">0</div>
+					</div>
+				</div>
+				<div class="tournament_block" style="margin-bottom: 50px;">
+					<div class="tournament_index">8강 3경기<br>(Bo5)</div>
+					<div class="tournament_team win">
+						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/GEN.webp' %}"></div>
+						<div class="tournament_team_name">Gen.G</div>
+						<div class="tournament_team_score">3</div>
+					</div>
+					<div class="tournament_team lose">
+						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/DWG.webp' %}"></div>
+						<div class="tournament_team_name">DWG KIA</div>
+						<div class="tournament_team_score">2</div>
+					</div>
+				</div>
+				<div class="tournament_block">
+					<div class="tournament_index">8강 4경기<br>(Bo5)</div>
+					<div class="tournament_team win">
+						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/DRX.webp' %}"></div>
+						<div class="tournament_team_name">DRX</div>
+						<div class="tournament_team_score">3</div>
+					</div>
+					<div class="tournament_team lose">
+						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/EDG.webp' %}"></div>
+						<div class="tournament_team_name">Edward Gaming Hycan</div>
+						<div class="tournament_team_score">2</div>
 					</div>
 				</div>
 			</div>
@@ -573,19 +573,6 @@
 			<div class="tournament_round">
 				<div class="tournament_block" style="margin-top: 95px;">
 					<div class="tournament_index">4강 1경기<br>(Bo5)</div>
-					<div class="tournament_team win">
-						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/WBG.webp' %}"></div>
-						<div class="tournament_team_name">Weibo Gaming Faw Audi</div>
-						<div class="tournament_team_score">3</div>
-					</div>
-					<div class="tournament_team lose">
-						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/BLG.webp' %}"></div>
-						<div class="tournament_team_name">Bilibili Gaming Pingan Bank</div>
-						<div class="tournament_team_score">2</div>
-					</div>
-				</div>
-				<div class="tournament_block" style="margin-top: 296px;">
-					<div class="tournament_index">4강 2경기<br>(Bo5)</div>
 					<div class="tournament_team lose">
 						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/JDG.webp' %}"></div>
 						<div class="tournament_team_name">JDG Intel Esports Club</div>
@@ -594,6 +581,19 @@
 					<div class="tournament_team win">
 						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/T1.webp' %}"></div>
 						<div class="tournament_team_name">T1</div>
+						<div class="tournament_team_score">3</div>
+					</div>
+				</div>
+				<div class="tournament_block" style="margin-top: 296px;">
+					<div class="tournament_index">4강 2경기<br>(Bo5)</div>
+					<div class="tournament_team lose">
+						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/GEN.webp' %}"></div>
+						<div class="tournament_team_name">Gen.G</div>
+						<div class="tournament_team_score">1</div>
+					</div>
+					<div class="tournament_team win">
+						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/DRX.webp' %}"></div>
+						<div class="tournament_team_name">DRX</div>
 						<div class="tournament_team_score">3</div>
 					</div>
 				</div>
@@ -611,13 +611,13 @@
 				<div class="tournament_block" style="margin-top: 285px;">
 					<div class="tournament_index">결승전<br>(Bo5)</div>
 					<div class="tournament_team lose">
-						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/WBG.webp' %}"></div>
-						<div class="tournament_team_name">Weibo Gaming Faw Audi</div>
-						<div class="tournament_team_score">0</div>
-					</div>
-					<div class="tournament_team win">
 						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/T1.webp' %}"></div>
 						<div class="tournament_team_name">T1</div>
+						<div class="tournament_team_score">2</div>
+					</div>
+					<div class="tournament_team win">
+						<div class="tournament_team_img"><img src="{% static 'img/teams/Worlds 2022/DRX.webp' %}"></div>
+						<div class="tournament_team_name">DRX</div>
 						<div class="tournament_team_score">3</div>
 					</div>
 				</div>
